# slm_experiments

./: .dockerignore  .env.example  .gitignore  CLEARML_INTEGRATION.md  CLEARML_METRICS_GUIDE.md  CLEARML_SETUP.md  COMMANDS_CHEATSHEET.md  Dockerfile.experiments  Dockerfile.experiments.cpu  MEMORY_METRICS.md  MEMORY_TRACKING_GUIDE.md  OFFLINE_MODE.md  QUICK_START.md  README.md  S3_DATA_MANAGEMENT.md  SETUP.md  STORAGE_INFO.md  build_docker_image.sh  check_experiment.sh  check_minio_artifacts.py  clearml.conf  clearml.conf.docker  clearml_offline.conf  convert_mirage_data.py  convert_nq_data.py  convert_simple_qa_data.py  install_nvidia_docker.sh  pyproject.toml  pyproject_backup.toml  pyproject_minimal.toml  recalculate_token_recall.py  requirements.txt  run_batch_experiments.py  run_experiment_fast.sh  run_experiment_simple.py  run_in_docker_network.sh  run_recalculate_token_recall.sh  run_test_experiment.sh  setup_clearml_credentials.py  setup_clearml_env.sh  (+11 more)
configs/: config.yaml
configs/dataset/: local_mirage.yaml  local_nq.yaml  local_simple_qa.yaml  nq.yaml  rag_nq.yaml  simple_qa.yaml
configs/experiment_mode/: no_context.yaml  oracle_context.yaml  oracle_long_context.yaml  retriever_context.yaml  test_100_samples.yaml  test_10_samples.yaml  test_3_samples.yaml
src/: __init__.py  cli.py
utils/: check_docker_env.py  check_minio_artifacts.py  download_from_s3.py  download_processed_data.py  process_s3_data.py  run_docker_check.sh  run_experiment_background.sh  run_experiment_fast.sh  setup_clearml_env.sh  test_minimal.py  test_s3_connection.py  test_services.sh
(+40 files in other folders)
