[tool.poetry]
name = "slm-experiments"
version = "0.1.0"
description = "Framework for experiments with small language models"
authors = ["LinkaG <z.gilganova@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = ">=2.0.0,<2.8.0"
transformers = "^4.40.0"
numpy = "^1.24.0"
boto3 = "^1.34.0"
python-dotenv = "^1.0.0"
clearml = "^1.14.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
